<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.views.fragments.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_16">

        <include
            android:id="@+id/containerState"
            layout="@layout/item_states"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPokemon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_250"
            android:src="@drawable/pokemon_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iconPokeball"
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_16"
            android:rotation="45"
            android:src="@drawable/pokemon_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPokemon" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:ellipsize="end"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_25"
            app:layout_constraintBottom_toBottomOf="@id/iconPokeball"
            app:layout_constraintStart_toEndOf="@id/iconPokeball"
            app:layout_constraintTop_toBottomOf="@id/imgPokemon"
            app:layout_constraintTop_toTopOf="@id/iconPokeball"
            tools:text="Pokemon Name" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:text="@string/pokemon_id"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconPokeball"
            tools:text="Id" />

        <TextView
            android:id="@+id/txtProperties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:text="@string/pokemon_subtitle_properties"
            android:textColor="@color/grayText"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtId" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtProperties" />

        <TextView
            android:id="@+id/txtType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:text="@string/pokemon_subtitle_type"
            android:textColor="@color/grayText"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup1" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtType" />

        <TextView
            android:id="@+id/txtAbilities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:text="@string/pokemon_subtitle_abilities"
            android:textColor="@color/grayText"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAbilities" />

        <TextView
            android:id="@+id/txtSprites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/questrial"
            android:lines="1"
            android:text="@string/pokemon_subtitle_sprites"
            android:textColor="@color/grayText"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSprites"
            tools:itemCount="4"
            tools:listitem="@layout/item_sprite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>